[tool.poetry]
name = 'tda-api'
version = '0.2.2'
license = 'MIT'
description = 'An unofficial wrapper around the TD Ameritrade HTTP API.'
authors = ['Alex Golec <bottomless.septic.tank@gmail.com>']
readme = 'README.rst'
homepage = 'https://github.com/alexgolec/tda-api'
repository = 'https://github.com/alexgolec/tda-api'
documentation = 'https://tda-api.readthedocs.io/en/latest/'
keywords = ['finance', 'trading', 'equities', 'bonds', 'options']
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Intended Audience :: Developers',
    'Development Status :: 4 - Beta',
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Topic :: Office/Business :: Financial :: Investment',
]

[tool.poetry.dependencies]
python = "^3.6.1"
requests-oauthlib = "^1.3.0"
python-dateutil = "^2.8.1"
selenium = "^3.141.0"
websockets = "^8.1"

[tool.poetry.dev-dependencies]
colorama = "^0.4.3"
coverage = "^5.1"
nose = "^1.3.7"
pytz = "^2020.1"
sphinx = "^2.4.4"
sphinx_rtd_theme = "^0.4.3"

